[tool.poetry]
name = "folio_uuid"
version = "0.2.10"
description =  "A library for generating predictive uuids for FOLIO data migrations"
authors = ["Theodor Tolstoy <github.teddes@tolstoy.se>", "Lisa Sjögren", "Brooks Travis"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/FOLIO-FSE/folio_uuid"
repository = "https://github.com/FOLIO-FSE/folio_uuid"
keywords = ["FOLIO", "ILS", "LSP", "Library Systems", "MARC21", "Library data", "UUID"]

[tool.coverage.report]
show_missing = false
fail_under = 95

[tool.coverage.paths]
source = ["*/site-packages"]

[tool.coverage.run]
branch = true
source = ["folio_uuid"]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
coverage = {extras = ["toml"], version = "^6.5.0"}
pytest-cov = "^4.0.0"
black = "^22.10.0"
flake8 = "^5.0.4"
mypy = "^0.982"
flake8-black = "^0.3.3"
flake8-bugbear = "^22.9.23"
flake8-bandit = "^4.1.1"
flake8-isort = "^5.0.0"